--- a/sn_gamestate/configs/soccernet.yaml
+++ b/sn_gamestate/configs/soccernet.yaml
@@ -14,10 +14,10 @@ defaults:
   - modules/bbox_detector: yolov8
   - modules/reid: prtreid
   - modules/track: bpbreid_strong_sort
-  - modules/jersey_number_detect: mmocr
+  # - modules/jersey_number_detect: easyocr
   - modules/team: kmeans_embeddings
   - modules/team_side: mean_position
-  - modules/tracklet_agg: voting_role_jn
+  - modules/tracklet_agg: no_jersey # default: voting_role_jn
   - modules/pitch : nbjw_calib
   - modules/calibration: nbjw_calib
   - _self_
@@ -32,7 +32,7 @@ pipeline:
   - track
   - pitch
   - calibration
-  - jersey_number_detect
+  # - jersey_number_detect
   - tracklet_agg
   - team
   - team_side
@@ -43,22 +43,23 @@ experiment_name: "sn-gamestate"
 
 # Path definitions
 home_dir: "${oc.env:HOME}"
-data_dir: "${project_dir}/data"
+# data_dir: "/home/eirik/Projects/data/"
+data_dir: "data"
 model_dir: "${project_dir}/pretrained_models"
 
 # Machine configuration
-num_cores: 4
+num_cores: 10
 use_wandb: False
 use_rich: True
 
 modules: # Allows module-specific batch_size and other configuration
-  bbox_detector: {batch_size: 8}
-  pose_bottomup: {batch_size: 8}
-  reid: {batch_size: 64}
-  track: {batch_size: 64}
+  bbox_detector: {batch_size: 64}
+  pose_bottomup: {batch_size: 128}
+  reid: {batch_size: 256}
+  track: {batch_size: 512}
   pitch: {batch_size: 1}
   calibration: {batch_size: 1}
-  jersey_number_detect: {batch_size: 8}
+  jersey_number_detect: {batch_size: 1024}
 
 # Flags
 test_tracking: True
@@ -67,12 +68,12 @@ print_config: False
 
 # Dataset
 dataset:
-  nvid: 1  # For a quick first inference, only the first video is processed. Use "-1" to process all the videos.
+  nvid: -1  # For a quick first inference, only the first video is processed. Use "-1" to process all the videos.
 #  nframes: -1 # For testing on only a few frames, set to a positive number. Will disable evaluation !
-  eval_set: "valid"  # Tracking is performed on the SoccerNet validation set. Choose from {"train", "valid", "test", "challenge"}.
-  dataset_path: ${data_dir}/SoccerNetGS  # The SoccerNet game state dataset is located under the data path (defined above) in the 'SoccerNetGS' folder
+  eval_set: "train"  # Tracking is performed on the SoccerNet validation set. Choose from {"train", "valid", "test", "challenge"}.
+  dataset_path: ${data_dir}  # The SoccerNet game state dataset is located under the data path (defined above) in the 'SoccerNetGS' folder
   vids_dict: # Use one key per split (valid, test, etc)
-    valid: []  # Specify explicitly which video to apply tracking on, e.g. ['SNGS-04', 'SNGS-51'] . Ignored when left empty.
+    train: []  # Specify explicitly which video to apply tracking on, e.g. ['SNGS-04', 'SNGS-51'] . Ignored when left empty.
 
 # Tracker state (save computation time by dumping tracking results on disk for later re-use)
 state:
