--- a/plugins/calibration/pyproject.toml
+++ b/plugins/calibration/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Victor Joos <victor.joos@uclouvain.be>"]
 packages = [
     {include = "sn_calibration_baseline"},
     {include = "tvcalib"},
-    {include = "nbjw_calib"}
+    {include = "nbjw_calib"},
+    {include = "pnlcalib"}
 ]
 
 [tool.poetry.dependencies]
