--- a/sn_gamestate/configs/soccernet.yaml
+++ b/sn_gamestate/configs/soccernet.yaml
@@ -11,15 +11,15 @@ defaults:
   - engine: offline
   - state: save  # Dump tracking results to a .pcklz file to save computation time on the next run. Have a look at TrackLab tutorials for more details.
   - visualization: gamestate  # Save tracking results as a .mp4 video in the run directory specified below (sn-gamestate/outputs/...)
-  - modules/bbox_detector: yolov8
+  - modules/bbox_detector: yolo11
   - modules/reid: prtreid
   - modules/track: bpbreid_strong_sort
   # - modules/jersey_number_detect: easyocr
   - modules/team: kmeans_embeddings
   - modules/team_side: mean_position
   - modules/tracklet_agg: no_jersey # default: voting_role_jn
-  - modules/pitch : nbjw_calib
-  - modules/calibration: nbjw_calib
+  - modules/pitch : pnlcalib
+  - modules/calibration: pnlcalib
   - _self_
 
 # Pipeline definition :
@@ -43,23 +43,23 @@ experiment_name: "sn-gamestate"
 
 # Path definitions
 home_dir: "${oc.env:HOME}"
-# data_dir: "/home/eirik/Projects/data/"
-data_dir: "data"
+data_dir: "data" # Automatically updated by pipeline
 model_dir: "${project_dir}/pretrained_models"
 
 # Machine configuration
-num_cores: 10
+num_cores: 4
 use_wandb: False
 use_rich: True
 
-modules: # Allows module-specific batch_size and other configuration
+# Allows module-specific batch_size and other configuration
+modules:
   bbox_detector: {batch_size: 64}
-  pose_bottomup: {batch_size: 128}
-  reid: {batch_size: 256}
-  track: {batch_size: 512}
+  pose_bottomup: {batch_size: 256}
+  reid: {batch_size: 64}
+  track: {batch_size: 64}
   pitch: {batch_size: 1}
   calibration: {batch_size: 1}
-  jersey_number_detect: {batch_size: 1024}
+  # jersey_number_detect: {batch_size: 8}
 
 # Flags
 test_tracking: True
@@ -71,13 +71,16 @@ dataset:
   nvid: -1  # For a quick first inference, only the first video is processed. Use "-1" to process all the videos.
 #  nframes: -1 # For testing on only a few frames, set to a positive number. Will disable evaluation !
   eval_set: "train"  # Tracking is performed on the SoccerNet validation set. Choose from {"train", "valid", "test", "challenge"}.
-  dataset_path: ${data_dir}  # The SoccerNet game state dataset is located under the data path (defined above) in the 'SoccerNetGS' folder
+  # The SoccerNet game state dataset is located under the data path (defined above) in the 'SoccerNetGS' folder by default.
+  # The dataset_path is updated automatically when using the dribling detection pipeline
+  dataset_path: ${data_dir}
   vids_dict: # Use one key per split (valid, test, etc)
     train: []  # Specify explicitly which video to apply tracking on, e.g. ['SNGS-04', 'SNGS-51'] . Ignored when left empty.
 
 # Tracker state (save computation time by dumping tracking results on disk for later re-use)
 state:
-  save_file: "states/${experiment_name}.pklz"  # 'null' to disable saving. This is the save path for the tracker_state object that contains all modules outputs (bboxes, reid embeddings, jersey numbers, roles, teams, etc)
+  # save_file: "states/${experiment_name}.pklz"  # 'null' to disable saving. This is the save path for the tracker_state object that contains all modules outputs (bboxes, reid embeddings, jersey numbers, roles, teams, etc)
+  save_file: null  # 'null' to disable saving. This is the save path for the tracker_state object that contains all modules outputs (bboxes, reid embeddings, jersey numbers, roles, teams, etc)
   load_file: null  # 'null' to disable loading. Load a file that was saved with the 'state.save_file' option above. Don't forget to remove from the pipeline all modules that should not be run again, but loaded from the saved tracker state.
 
 # Visualization
@@ -93,6 +96,6 @@ hydra:
   job:
     chdir: True
   run:
-    dir: "outputs/${experiment_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}"
+    dir: "outputs/${experiment_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}" # Automatically updated by pipeline
   sweep:
     dir: "multirun_outputs/${experiment_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}"
